--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.bg{
+  background-image: url('https://styles.redditmedia.com/t5_2qmjl/styles/backgroundImage_mgwppg056ud71.png');
+}
