new design added

--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,7 @@ code {
 .bg{
   background-image: url('https://styles.redditmedia.com/t5_2qmjl/styles/backgroundImage_mgwppg056ud71.png');
 }
+
+.repo{
+  background-color: aliceblue;
+}
